--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.41MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-18.55MB/s(Youtube:不良林), server: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty, port: 668, type: vmess, uuid: a0fec1fb-e217-344b-84e1-45b412ccd670, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty}}
-  - {name: 🇫🇷 法国-2.81MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: HJ001.xiba1.xyz, port: 20762, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: HJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.87MB/s(Youtube:不良林), server: 116.129.254.212, port: 48606, type: ssr, cipher: aes-256-cfb, password: GjRQkK, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 1062:tLkKEk, obfs-param: ""}
+  - {name: 🇯🇵 日本-1.70MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-228.4KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-427.1KB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-742.0KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 6004, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-359.3KB/s(Youtube:不良林), server: sg-cn.teacher2050.com, port: 43508, type: trojan, password: E44523FE-B9E4-BD49-AEAF-DBABE701D016, sni: sg-cn.teacher2050.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.65MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.33MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.70MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.87MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.69MB/s(Youtube:不良林), server: 51.210.51.88, port: 443, type: ssr, cipher: aes-192-ctr, password: sEscPBiAD9K$&@79, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇫🇷 法国-1.05MB/s(Youtube:不良林), server: 51.210.51.88, port: 443, type: ssr, cipher: aes-192-ctr, password: sEscPBiAD9K$&@79, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-742.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-742.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-742.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-742.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-742.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-742.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-742.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-742.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
