--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.11MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-2.73MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-2.89MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-304.2KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20734, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.57MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.81MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.78MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.97MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-8.08MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15004, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
   - {name: 🇺🇸 美国-361.8KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20732, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-823.9KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20735, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.08MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-361.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-823.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-361.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-823.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-361.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-823.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
@@ -66,18 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.73MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-361.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-823.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
@@ -88,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-361.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-823.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
@@ -104,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-361.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-823.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
@@ -129,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-361.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-823.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
